# validate_file_encoding

./: Cargo.toml  README.md  install.sh
src/: detect.rs  git.rs  lib.rs  main.rs  mojibake.rs  output.rs
tests/: iso8859_15.txt  latin1.txt  latin1_as_utf8.txt  mojibake_utf8_to_latin1.txt  nordic_latin1.txt  utf8_as_latin1.txt  utf8_with_errors.txt  valid_utf8.txt  valid_utf8_2.txt  win1252.txt  win1252_mojibake.txt  win1252_specific.txt
