[package]
name = "validate-encoding"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies]
mcp-plugin-sdk = { path = "../rust-tools-mcp/crates/mcp-plugin-sdk" }
chardetng = "0.1"
encoding_rs = "0.8"
anyhow = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "0.8"
